// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink change when isAuthenticated is true or false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <InjectIntl(Header)
    intl={
        Object {
            "defaultFormats": Object {},
            "defaultLocale": "en",
            "formatDate": [Function],
            "formatHTMLMessage": [Function],
            "formatMessage": [Function],
            "formatNumber": [Function],
            "formatPlural": [Function],
            "formatRelative": [Function],
            "formatTime": [Function],
            "formats": Object {},
            "formatters": Object {
              "getDateTimeFormat": [Function],
              "getMessageFormat": [Function],
              "getNumberFormat": [Function],
              "getPluralFormat": [Function],
              "getRelativeFormat": [Function],
            },
            "locale": "en",
            "messages": Object {
              "app.title": "Welcome",
              "locale.en": "English",
              "locale.fr": "French",
              "nav.account": "My account",
              "nav.home": "Home",
              "nav.login": "Login",
              "nav.logout": "Logout",
              "nav.register": "Register",
              "nav.users": "users",
            },
            "now": [Function],
            "textComponent": "span",
          }
    }
    isAuthenticated={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "intl": Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {
          "app.title": "Welcome",
          "locale.en": "English",
          "locale.fr": "French",
          "nav.account": "My account",
          "nav.home": "Home",
          "nav.login": "Login",
          "nav.logout": "Logout",
          "nav.register": "Register",
          "nav.users": "users",
        },
        "now": [Function],
        "textComponent": "span",
      },
      "isAuthenticated": true,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "intl": Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": Object {
            "app.title": "Welcome",
            "locale.en": "English",
            "locale.fr": "French",
            "nav.account": "My account",
            "nav.home": "Home",
            "nav.login": "Login",
            "nav.logout": "Logout",
            "nav.register": "Register",
            "nav.users": "users",
          },
          "now": [Function],
          "textComponent": "span",
        },
        "isAuthenticated": true,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "intl": Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {
          "app.title": "Welcome",
          "locale.en": "English",
          "locale.fr": "French",
          "nav.account": "My account",
          "nav.home": "Home",
          "nav.login": "Login",
          "nav.logout": "Logout",
          "nav.register": "Register",
          "nav.users": "users",
        },
        "now": [Function],
        "textComponent": "span",
      },
    },
  },
}
`;

exports[`NavLink change when isAuthenticated is true or false 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <InjectIntl(Header)
    intl={
        Object {
            "defaultFormats": Object {},
            "defaultLocale": "en",
            "formatDate": [Function],
            "formatHTMLMessage": [Function],
            "formatMessage": [Function],
            "formatNumber": [Function],
            "formatPlural": [Function],
            "formatRelative": [Function],
            "formatTime": [Function],
            "formats": Object {},
            "formatters": Object {
              "getDateTimeFormat": [Function],
              "getMessageFormat": [Function],
              "getNumberFormat": [Function],
              "getPluralFormat": [Function],
              "getRelativeFormat": [Function],
            },
            "locale": "en",
            "messages": Object {
              "app.title": "Welcome",
              "locale.en": "English",
              "locale.fr": "French",
              "nav.account": "My account",
              "nav.home": "Home",
              "nav.login": "Login",
              "nav.logout": "Logout",
              "nav.register": "Register",
              "nav.users": "users",
            },
            "now": [Function],
            "textComponent": "span",
          }
    }
    isAuthenticated={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "intl": Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {
          "app.title": "Welcome",
          "locale.en": "English",
          "locale.fr": "French",
          "nav.account": "My account",
          "nav.home": "Home",
          "nav.login": "Login",
          "nav.logout": "Logout",
          "nav.register": "Register",
          "nav.users": "users",
        },
        "now": [Function],
        "textComponent": "span",
      },
      "isAuthenticated": false,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "intl": Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": Object {
            "app.title": "Welcome",
            "locale.en": "English",
            "locale.fr": "French",
            "nav.account": "My account",
            "nav.home": "Home",
            "nav.login": "Login",
            "nav.logout": "Logout",
            "nav.register": "Register",
            "nav.users": "users",
          },
          "now": [Function],
          "textComponent": "span",
        },
        "isAuthenticated": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "intl": Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {
          "app.title": "Welcome",
          "locale.en": "English",
          "locale.fr": "French",
          "nav.account": "My account",
          "nav.home": "Home",
          "nav.login": "Login",
          "nav.logout": "Logout",
          "nav.register": "Register",
          "nav.users": "users",
        },
        "now": [Function],
        "textComponent": "span",
      },
    },
  },
}
`;
